# ConsoleImage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: edge.glsl  main.cpp  render.frag  render.frag.glsl  render.vert
